Adds routes to access in memory database to feed into API
